# AI-ML

./: README.md
ai-ml-projects/ai-ml-projects/: pyproject.toml  requirements.txt
ai-ml-projects/ai-ml-projects/app/api/: routes.py
ai-ml-projects/ai-ml-projects/app/core/: config.py
ai-ml-projects/ai-ml-projects/app/models/: schemas.py
ai-ml-projects/ai-ml-projects/app/services/: generator.py  retriever.py
ai-ml-projects/ai-ml-projects/tests/: test_api.py  test_services.py
