[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ml-projects-template"
version = "0.1.0"
description = "Production-style Python AI service template with FastAPI, tests, Docker, and CI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Veena Kakani" }
]
dependencies = [
  "fastapi==0.118.0",
  "uvicorn[standard]==0.37.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
